# drf-firebase-token-auth

./: LICENSE  README.rst  pyproject.toml
.github/workflows/: main.yaml  main.yml
drf_firebase_token_auth/: admin.py  apps.py  authentication.py  models.py  settings.py
drf_firebase_token_auth/migrations/: 0001_initial.py
tests/: test_authentication.py  test_drf_firebase_token_auth.py  test_settings.py
