[tool.poetry]
name = "drf-firebase-token-auth"
version = "0.2.0"
description = "Firebase token authentication for Django Rest Framework"
authors = ["Ron Heimann <ron.heimann@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ronhe/drf-firebase-token-auth"
repository = "https://github.com/ronhe/drf-firebase-token-auth"
keywords = ["Django", "Rest Framework", "Firebase", "Authentication", "Token"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
firebase-admin = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
